Remove botSelectScreen from start function

--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
                 gameMode = mode;
                 document.getElementById('startScreen').classList.remove('active');
                 document.getElementById('multiplayerScreen').classList.remove('active');
+                document.getElementById('botSelectScreen').classList.remove('active');
                 document.getElementById('hud').classList.add('active');
                 
                 var numPlayers = 2;
